components/ingress/opencostapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opencost
  namespace: opencost
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: opencost-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - OpenCost"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.opencost.kcd.eso.pt
      secretName: opencostapi-tls
  rules:
    - host: api.opencost.kcd.eso.pt
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opencost
                port:
                  number: 9003
